# embroidery-thumbnailer-kde

./: .gitignore  LICENSE  README.md
thumbnailer-kde/: CMakeLists.txt  embroidery-mimetypes.xml  embroidery-thumbnailer-standalone.cpp  embroidery.thumbnailer  install.sh
